# dataframeitGUI

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  react-doctor.config.json
.claude/skills/comentarios-relatorio/: SKILL.md
.github/: dependabot.yml
.github/scripts/: test-deploy-failure-notification.sh
.github/workflows/: claude.yml  database-tests.yml  fly-deploy.yml  frontend-fly-deploy.yml  notify-deploy-failure.yml  secret-scan.yml
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .dockerignore  .env.example  Dockerfile  config.py  fly.toml  main.py  pyproject.toml
backend/routes/: llm_routes.py  pydantic_routes.py  request_models.py
backend/services/: auth.py  auto_review_reconciliation.py  condition_evaluator.py  llm_rate_limiter.py  llm_runner.py  pydantic_compiler.py  supabase_client.py
backend/tests/: conftest.py  test_auth.py  test_auto_review_reconciliation.py  test_docs_gate.py  test_llm_dataframeit_validation.py  test_llm_error_location.py  test_llm_feature_flag.py  test_llm_flatten_nested.py  test_llm_postprocess.py  test_llm_preview_prompt.py  test_llm_rate_limit.py  test_llm_runner_classify.py  test_llm_runner_cleanup.py  test_llm_runner_error_msg.py  test_llm_runner_extract.py  test_llm_runner_justifications.py  test_llm_runner_response_row.py  test_llm_runner_run_llm.py  test_main_cors.py  test_pydantic_compiler.py  test_pydantic_compiler_ast.py  test_pydantic_routes.py  test_request_validation.py
data/zolgensma/: .gitignore  decisoes-tjsp.csv  extraction-report.md  processos-tjsp.txt  processos.csv
docs/: API.md  ARCHITECTURE.md  CODE_QUALITY_TOOLING.md  COMPONENTS.md  DATABASE.md  DEDUP_ZOLGENSMA_2026-06.md  LINT_CONFIG.md  PHASES.md  UI_SPEC.md  VERIFICATION.md
docs/comentarios/: Encaminhamentos.md  Zolgensma-20260422-direcionamentos.md  Zolgensma-20260422-q24-justificativas.md  Zolgensma-20260422.md
docs/decisions/: project-from-schema-scope.md  regex-extraction-scope.md
docs/examples/: example-project-spec.md
docs/performance/: auth-render-timing-431.md
docs/proposals/: issue-216-partial-coding.md  issue-223-named-rounds.md
docs/runbooks/: clerk-production-cutover.md
docs/security/: rls-audit-2026-07.md  security-program.md  service-role-audit-2026-07.md
frontend/: .dockerignore  .env.e2e.example  .env.local.example  .fallowrc.jsonc  .gitignore  .npmrc  Dockerfile  README.md  doctor.config.json  eslint.config.mjs  eslint.config.typed.mjs  fly.toml  knip.json  next.config.ts  package-lock.json  package.json  playwright-pre-push-env.ts  playwright.config.ts  react-doctor.config.json  vitest.config.ts
frontend/.clerk/.tmp/: keyless.json
frontend/e2e/: clerk-cleanup.ts  coding-save.smoke.spec.ts  config-guard.smoke.spec.ts  dashboard.smoke.spec.ts  export.smoke.spec.ts  global.setup.ts  lottery.smoke.spec.ts
frontend/eslint-rules/: server-action-exports.mjs
frontend/scripts/: assign-pending-arbitrations-zolgensma-2026-05-19.mjs  backfill-rounds-from-batches-2026-05-07.mjs  dedup-merge-zolgensma-2026-06-18.mjs  fix-self-coded-arbitrations-zolgensma-2026-05-19.mjs  fix-zolgensma-schema-2026-05-12.mjs  react-doctor-gate.sh  reassign-orphan-arbitrations-zolgensma-2026-05-19.mjs  run-db-tests.sh  run-sql-test.sh  sync-existing-users-to-clerk.ts  test-db.sh  triage-nusinersen-zolgensma-2026-05-07.mjs
frontend/scripts/comentarios-relatorio/: apply-decisions.ts  fetch-open-comments.ts  generate-report.py  load-env.ts
frontend/scripts/e2e-fixtures/: create-coding-save-fixture.mts
frontend/scripts/erros-llm-relatorio/: generate.ts
frontend/scripts/invariants/: check-invariants.ts
frontend/scripts/worktree-env/: bootstrap.mjs  bootstrap.sh  destination-state.mjs  env-contract.mjs
frontend/src/: middleware.ts  proxy.ts
frontend/src/actions/: assignments.ts  comparisons.ts  complete-access.ts  discussions.ts  documents.ts  equivalences.ts  export.ts  field-order.ts  field-reviews.ts  llm.ts  members.ts  progress.ts  project-comments.ts  projects.ts  responses.ts  reviews.ts  rounds.ts  schema.ts  stats.ts  suggestions.ts  verdicts.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: document-upload-helpers.ts  useArbitrationDoc.ts  useAutosaveOnExit.ts  useBrowseDocuments.ts  useCachedResource.ts  useDirtyDocs.ts  useDocumentForCoding.ts  useDocumentText.ts  useDocumentUpload.ts  useDocumentsPageState.ts  useEligibleDocCount.ts  useFieldOrder.ts  useFullscreen.ts  useGabaritoFilters.ts  useLlmErrorFiltering.ts  useLlmInsightsFilters.ts  useLlmRunProgress.ts  useMemberListDialogs.ts  useMemberListState.ts  usePinnedDoc.ts  usePromptPreview.ts  useResetOnKeyChange.ts  useReviewCommentsFilters.ts  useReviewQueueNavigation.ts  useRulesFormState.ts  useSchemaDraft.ts  useSchemaEditorUI.ts  useStableListIds.ts  useSuggestFieldState.ts  useUrlState.ts
frontend/src/lib/: analyze-tabs.ts  answer-merge.ts  answer-staleness.ts  api-server.ts  api.ts  arbitragem-sync.ts  arbitration-order.ts  auth.ts  auto-comparison.ts  auto-review-backlog.ts  auto-review-decided.ts  auto-review-reconciler.ts  auto-review.ts  auto-revisao-sync.ts  automation-modes.ts  cache.ts  clerk-primary-email.ts  clerk-supabase-uid.ts  clerk-sync.ts  coding-autosave.ts  (+57 more)
frontend/supabase/: config.toml
scripts/zolgensma/: clone-project.mjs  extract-processos.mjs  scrape-tjsp.py
specs/001-improve-assignment-lottery/: data-model.md  execution-scale-plan.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-preregister-members/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  validation-evidence.md
specs/003-auth-render-path/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-export-original-metadata/: spec.md
specs/004-export-original-metadata/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+711 files in other folders)
