[project]
name = "dataframeit-gui-backend"
version = "0.1.0"
description = "Backend FastAPI para dataframeit"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "supabase>=2.31.0",
    "dataframeit>=0.6.0",
    "pandas>=3.0.3",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "langchain-anthropic>=1.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# O backend e um app FastAPI flat (sem diretorio de pacote homonimo), entao o
# hatchling nao consegue inferir o conteudo do wheel sozinho e aborta o build
# (quebrava `uv run ruff`/`pytest`). Listar os modulos explicitamente resolve.
[tool.hatch.build.targets.wheel]
only-include = ["main.py", "config.py", "routes", "services"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# E (pycodestyle), F (pyflakes), I (isort), B (bugbear), C901 (complexidade mccabe).
# E501 fica a cargo do `ruff format` — evita ruido de comprimento de linha.
select = ["E", "F", "I", "B", "C901"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Grandfathering de complexidade legada (#260): refatorar estas funcoes esta
# fora do escopo do PR de tooling. Novas funcoes complexas nos demais arquivos
# continuam disparando C901. Ver docs/CODE_QUALITY_TOOLING.md.
"services/condition_evaluator.py" = ["C901"]  # evaluate_condition (13 > 10)
"services/llm_runner.py" = ["C901"]           # run_llm (35 > 10)
"services/pydantic_compiler.py" = ["C901"]    # compile_pydantic (20 > 10)

[dependency-groups]
dev = [
    "ruff>=0.15",
]
