[project]
name = "dataframeit-gui-backend"
version = "0.1.0"
description = "Backend FastAPI para dataframeit"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "supabase>=2.31.0",
    "dataframeit>=0.6.0",
    "pandas>=3.0.3",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.3",
    "langchain-anthropic>=1.4.7",
    "pyjwt[crypto]>=2.13.0",
]

# Este projeto é um app FastAPI executado via `uvicorn main:app`, não uma lib
# instalável — não há diretório de pacote para empacotar. Sem isto, `uv sync` /
# `uv run` falham tentando buildar um wheel. O deploy (Dockerfile) instala as
# dependências direto via `uv pip install --system`, sem empacotar o app.
[tool.uv]
package = false
# Cooldown de dependencias: aguarda 7 dias antes de resolver versoes recem
# publicadas, reduzindo a janela de pacotes maliciosos/instaveis (semgrep
# uv-missing-dependency-cooldown). Requer uv >= 0.9.17.
exclude-newer = "7 days"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# O backend é um app FastAPI flat (sem diretório de pacote homônimo), então o
# hatchling não consegue inferir o conteúdo do wheel sozinho e aborta o build
# (quebrava `uv run ruff`/`pytest`). Listar os módulos explicitamente resolve.
[tool.hatch.build.targets.wheel]
only-include = ["main.py", "config.py", "routes", "services"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

# ignore_missing_imports: as libs de LLM (langchain-*, dataframeit) nao tem
# stubs publicados; sem isso o mypy so reportaria "import-untyped" em cascata
# e mascararia os erros de tipo reais. Sem strict de cara — mesmo raciocinio
# do lint:types no frontend (#260): comecar com o subset que pega o footgun
# real (tipos incompativeis, atributos inexistentes) sem exigir refatorar a
# base toda para satisfazer strict mode.
#
# python_version = 3.12 (nao 3.11, o piso de requires-python): o runtime real
# e o Dockerfile fixam 3.12. Simular 3.11 faz o mypy recusar parsear stubs que
# usam sintaxe 3.12+ (ex.: `type` statement do PEP 695 no stub do numpy) e
# abortar com "errors prevented further checking" em vez de reportar um erro
# de tipo normal.
#
# follow_imports = "silent": sem isso, checar um unico arquivo (como o hook de
# pre-push faz, file-scoped) tambem reporta os erros de qualquer modulo que
# esse arquivo importe. Como services/auth.py e importado por praticamente
# toda rota, sem "silent" um push que so tocasse routes/llm_routes.py (por
# exemplo) ficaria acoplado aos erros de tipo de auth.py mesmo sem editá-lo.
# "silent" mantem o modulo importado sendo checado (a inferencia de tipo
# continua correta) mas suprime os diagnosticos dele quando ele nao foi
# passado explicitamente na linha de comando.
#
# exclude = ["tests/"]: so tem efeito quando o mypy descobre arquivos sozinho
# (`uv run mypy .`); e ignorado quando arquivos sao passados explicitamente,
# que e como o hook de pre-push invoca. A protecao real de tests/ no hook vem
# do `exclude: ^backend/tests/.*\.py$` em .pre-commit-config.yaml — os dois
# precisam ficar em sincronia manualmente, nao ha enforcement cruzado.
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
exclude = ["tests/"]

# Grandfathering (#260, mesmo espirito do per-file-ignores do ruff acima):
# llm_runner.py concentra 103 dos 113 erros do baseline inicial, quase todos
# union-attr da explosao do alias JSON recursivo em torno de dict cru vindo
# do LLM. E o mesmo arquivo ja isento de C901 no ruff (run_llm, CCN 35) --
# tipar corretamente exige o mesmo refactor maior, fora do escopo do PR de
# tooling. Sem isso, qualquer push que toque o arquivo bloquearia nos 103
# erros pre-existentes (o hook e file-scoped, nao line-scoped). Ver
# docs/CODE_QUALITY_TOOLING.md.
[[tool.mypy.overrides]]
module = "services.llm_runner"
ignore_errors = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# E (pycodestyle), F (pyflakes), I (isort), B (bugbear), C901 (complexidade mccabe).
# E501 fica a cargo do `ruff format` — evita ruido de comprimento de linha.
select = ["E", "F", "I", "B", "C901"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
# `Depends(...)`/`Query(...)` em defaults de parametro sao o idioma do FastAPI,
# nao o anti-padrao que o B008 visa — declaram a dependencia na assinatura.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.15.19",
    "mypy>=1.15",
]
